# EGoTouchRev

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  chip_state_analysis.md  config.ini  frame_layout_analysis.md  imgui.ini  implementation_plan.md  implementation_plan.md.resolved  plan.md  待构建.md  流程图.md
.github/workflows/: build-kmdf-arm64.yml
App/include/: ConcurrentRingBuffer.h  Coordinator.h  DiagnosticUI.h  DiagnosticsWorkbench.h  RuntimeOrchestrator.h
App/source/: ApplicationEntry.cpp  Coordinator.cpp  DiagnosticUI.cpp  DiagnosticsWorkbench.cpp  RuntimeOrchestrator.cpp  main.cpp
BTMCUTool/: BtMcuTestTool.cpp
Common/include/: ConfigSync.h  GuiLogSink.h  IpcPipeClient.h  IpcPipeServer.h  IpcProtocol.h  Logger.h  SharedFrameBuffer.h
Common/source/: IpcPipeClient.cpp  IpcPipeServer.cpp  Logger.cpp  SharedFrameBuffer.cpp
Control/app/: ControlServiceMain.cpp  ControlServiceTestTool.cpp
Control/include/: ControlPipeClient.h  ControlPipeServer.h  ControlRuntime.h  ControlTypes.h
Control/source/: ControlPipeClient.cpp  ControlPipeServer.cpp  ControlRuntime.cpp
Device/: Device.h
Device/btmcu/: PenCommandApi.h  PenSession.cpp  PenUsbClient.h  PenUsbCodec.h  PenUsbFrame.cpp
Device/btmcu/win32/: PenUsbTransportWin32.cpp
Device/himax/: HimaxProtocol.cpp
Device/include/: Device.h
Device/include/btmcu/: PenSession.h  PenUsbTransport.h
Device/include/himax/: HimaxChip.h  HimaxProtocol.h  HimaxRegisters.h
Device/include/runtime/: DeviceRuntime.h
Device/runtime/: DeviceRuntime.h
Device/source/btmcu/: PenUsbClient.cpp  PenUsbCodec.cpp
Device/source/himax/: HimaxChip.cpp  HimaxProtocol.cpp  HimaxRegisters.cpp
Device/source/runtime/: DeviceRuntime.cpp
Device/vhf/: VhfReporter.cpp  VhfReporter.h
EGoTouchService/Common/include/: Logger.h
EGoTouchService/Device/: Device.h
EGoTouchService/Device/btmcu/: BtHidChannel.cpp  BtHidChannel.h  PenBridge.cpp  PenBridge.h  PenCommandApi.cpp  PenUsbFrame.h  PenUsbTypes.h
EGoTouchService/Device/common/: DeviceError.h  StylusState.h
EGoTouchService/Device/himax/: AfeTypes.h  HimaxAfe.cpp  HimaxAfe.h  HimaxChip.cpp  HimaxChip.h  HimaxProtocol.h
EGoTouchService/Device/penevt/: PenEventBridge.cpp  PenEventBridge.h
EGoTouchService/Device/penpress/: PenPressureReader.cpp  PenPressureReader.h
EGoTouchService/Device/runtime/: DeviceRuntime.cpp  DeviceRuntime.h
EGoTouchService/Device/vhf/: VhfReporter.cpp  VhfReporter.h
EGoTouchService/Engine/: ConfigSchema.h  EngineTypes.h  FramePipeline.h  IFrameProcessor.h
EGoTouchService/Engine/Preprocessing/: BaselineSubtraction.cpp  BaselineSubtraction.h  CMFProcessor.cpp  CMFProcessor.h  GaussianFilter.cpp  GaussianFilter.h  GridIIRProcessor.cpp  GridIIRProcessor.h  MasterFrameParser.cpp  MasterFrameParser.h  SignalConditioningFilter.cpp  SignalConditioningFilter.h
EGoTouchService/Engine/Reporting/: StylusProcessor.cpp  StylusProcessor.h  TouchGestureStateMachine.cpp  TouchGestureStateMachine.h  TouchTracker.cpp  TouchTracker.h
EGoTouchService/Engine/StylusSolver/: AsaTypes.h  CoorPostProcessor.cpp  CoorPostProcessor.h  CoordinateSolver.cpp  CoordinateSolver.h  GridPeakDetector.cpp  GridPeakDetector.h  StylusPipeline.cpp  StylusPipeline.h
EGoTouchService/Engine/TouchSolver/: CoordinateFilter.cpp  CoordinateFilter.h  EdgeCompensation.h  EdgeRejection.cpp  FeatureExtractor.cpp  FeatureExtractor.h  TouchSize.cpp  ZoneExpander.cpp
EGoTouchService/Host/: SystemStateMonitor.cpp
EGoTouchService/include/: ServiceHost.h  ServiceShell.h
EGoTouchService/source/: ServiceEntry.cpp  ServiceHost.cpp  ServiceShell.cpp
Engine/: FramePipeline.cpp  IFrameProcessor.h
Engine/Preprocessing/: BaselineSubtraction.h  GridIIRProcessor.cpp  GridIIRProcessor.h  SignalConditioningFilter.cpp  SignalConditioningFilter.h
Engine/Reporting/: StylusProcessor.cpp  TouchGestureStateMachine.cpp  TouchGestureStateMachine.h  TouchTracker.h
Engine/TouchSolver/: CoordinateFilter.cpp  CoordinateFilter.h  EdgeCompensation.cpp  EdgeRejection.h  FeatureExtractor.cpp  PeakDetector.cpp  PeakDetector.h  TouchSize.h  ZoneExpander.h
Engine/include/: CMFProcessor.h  CentroidExtractor.h  DynamicDeadzoneFilter.h  EdgeCompensation.h  EngineTypes.h  FeatureExtractor.h  GridIIRProcessor.h  SignalSegmenter.h  SpatialSharpenFilter.h
Engine/source/: BaselineSubtraction.cpp  CentroidExtractor.cpp  FeatureExtractor.cpp  GridIIRProcessor.cpp  MasterFrameParser.cpp  SignalSegmenter.cpp  TouchTracker.cpp
Engine/tests/: RawdataBenchmarkTest.cpp
Host/include/: SystemStateEvent.h  SystemStateMonitor.h
Host/source/: HostModuleAnchor.cpp  SystemStateMonitor.cpp
Host/tests/: SystemStateMonitorNamedEventTest.cpp
KernelDriver/EGoTouchKm/: Driver.cpp  Driver.h  EGoTouchKm.inf  EGoTouchKm.sln  EGoTouchKm.vcxproj  Ioctl.h
Python/: dvr_debug_tools.py  touch_algo_v1_validate.ipynb
Python/data/: config.ini
Tools/BtMcuTestTool/: BtMcuTestTool.cpp
Tools/EGoTouchApp/include/: ConfigUIRenderer.h  DiagnosticsWorkbench.h  RuntimeOrchestrator.h  ServiceProxy.h
Tools/EGoTouchApp/source/: ApplicationEntry.cpp  ConfigUIRenderer.cpp  DiagnosticsWorkbench.cpp  ServiceProxy.cpp
docs/: Touch_Parsing_Algorithm_V1.md  architecture_redesign.md  arm64_kmdf_driver_migration.md  stylus_coordinate_pipeline.md  tsacore_algorithm_analysis.md  模块参数说明.md  设计决策与差异.md  项目总结.md
docs/逆向/: PixelGainTable  chip_state_analysis.md  lut_output.txt  pen_protocol_full_analysis.md  penservice_events.md  stylus_coordinate_pipeline.md  stylus_system_reference.md  tsa_asa_process_analysis.md  逆向分析记录.md  通信协议说明.md
exports/auto/: heatmap_20260323_235305_245_1.csv  heatmap_20260323_235306_070_2.csv  heatmap_20260323_235306_326_3.csv
exports/manual/: heatmap_20260323_234953_894_0.csv  heatmap_20260323_235040_122_1.csv
exports/rawdata/: heatmap_20260323_235304_381_0.csv
scripts/: EGoTouchSetup.iss  EGoTouchSetup.wxs  EGoTouchTestSetup.wxs  EULA.rtf  build_kmdf_driver.bat  install_kmdf_driver.bat  install_service.bat  pack_test_version.bat  uninstall_kmdf_driver.bat  uninstall_service.bat
(+5 files in other folders)
